RESOLVED FIXED121169
media/track/track-cue-rendering-vertical.html is flaky on Mac
https://bugs.webkit.org/show_bug.cgi?id=121169
Summary media/track/track-cue-rendering-vertical.html is flaky on Mac
Alexey Proskuryakov
Reported 2013-09-11 10:56:52 PDT
I'm observing that cue text size is not always the same.
Attachments
proposed fix (2.57 KB, patch)
2013-09-11 11:23 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2013-09-11 11:23:39 PDT
Created attachment 211331 [details] proposed fix
WebKit Commit Bot
Comment 2 2013-09-11 12:17:42 PDT
Comment on attachment 211331 [details] proposed fix Clearing flags on attachment: 211331 Committed r155553: <http://trac.webkit.org/changeset/155553>
WebKit Commit Bot
Comment 3 2013-09-11 12:17:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.