https://bugs.webkit.org/show_bug.cgi?id=121169 media/track/track-cue-rendering-vertical.html is flaky on Mac

Reviewed by Eric Carlson.

Source/WebCore:

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateSizes): Added a FIXME.

LayoutTests:

* media/media-reparent.html: Changed to use setTimeout directly.

* media/video-test.js:
(endTest): Added a zero delay timer to let text track layout do its work.


Canonical link: https://commits.webkit.org/139111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155553 268f45cc-cd09-0410-ab3c-d52691b4dbfc